crates/ruff_mdtest/resources/mdtest/snapshots/f-string.md_-_`f-string`_(`UP032`)_-_Drive-by___dropping_a…_(5332b2274fa2270a).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: f-string.md - `f-string` (`UP032`) - Drive-by: dropping a leading empty literal leaves no orphan whitespace
mdtest path: crates/ruff_linter/../ruff_linter/resources/mdtest/pyupgrade/f-string.md
---

# Python source files

## mdtest_snippet.py

```
1 | "" "{}".format(x)  # error: [f-string]
2 | "a" "" "{}".format(x)  # error: [f-string]
```

# Diagnostics

```
error[UP032]: Use f-string instead of `format` call
 --> src/mdtest_snippet.py:1:1
  |
1 | "" "{}".format(x)  # error: [f-string]
  | ^^^^^^^^^^^^^^^^^
  |
help: Convert to f-string
  - "" "{}".format(x)  # error: [f-string]
1 + f"{x}"  # error: [f-string]
2 | "a" "" "{}".format(x)  # error: [f-string]

```

```
error[UP032]: Use f-string instead of `format` call
 --> src/mdtest_snippet.py:2:1
  |
2 | "a" "" "{}".format(x)  # error: [f-string]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
help: Convert to f-string
1 | "" "{}".format(x)  # error: [f-string]
  - "a" "" "{}".format(x)  # error: [f-string]
2 + "a" f"{x}"  # error: [f-string]

```
